# Housing-welfare-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: cluster_analysis.py  welfare_blindspot.py
data/: README.md
preprocessing/: build_base_complex.py  clean_community.py  join_complexes_with_soc.py  merge_soc_accessibility_layers.py
scripts/: build_blindspot_web_data.py  build_recsys_web_data.py  run_recsys_api.py
src/rec_sys/: api.py  community_retriever.py  config.py  data_loader.py  program_catalog.py  recommender.py  server.py  static_builder.py
web/: index.html  styles.css
web/_shared/: system-nav.css
web/blindspot/: index.html
web/blindspot/data/: alpha.csv  complexes.csv  regional.csv  weights.csv
web/recsys/: app.js  index.html  styles.css
web/recsys/data/: complexes.json  details.json  recommendations.json  stats.json
