[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jinju-welfare-research"
version = "0.1.0"
description = "Public rental housing welfare blindspot analysis and program recommendation system."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn==0.32.1",
  "openai==1.55.3",
  "python-dotenv==1.0.1",
  "pydantic==2.10.3",
  "pandas==2.2.3",
  "numpy==2.1.3",
  "geopandas==1.1.3",
  "matplotlib==3.10.8",
  "seaborn==0.13.2",
  "scipy==1.15.3",
  "scikit-learn==1.7.2",
  "shapely==2.1.2",
  "openpyxl==3.1.5",
]

[project.scripts]
recsys-api = "rec_sys.server:run_server"

[tool.setuptools.packages.find]
where = ["src"]
